# onlyconnect

./: .gitignore  Cargo.toml  README.md
db/: Cargo.toml
db/migrations/044952_create_db/: down.sql  up.sql
db/src/: models.rs  schema.rs
migrations/044952_create_db/: down.sql  up.sql
server/: Cargo.toml
server/src/: config.rs  db_bindings.rs  lib.rs  main.rs
server/tests/: user.rs
src/: db.rs  error.rs  lib.rs  main.rs
src/db/: models.rs  schema.rs
templates/: index.html.hbs
